# SUJBOT

./: .dockerignore  .env.example  .env.test  .gitignore  CHANGELOG.md  CLAUDE.md  CONFIG_PARAMETERS_MAPPING.md  COST_TRACKING.md  COST_TRACKING_FIX_SUMMARY.md  CROSS_PLATFORM_CHANGES.md  DEPLOYMENT_CHECKLIST.md  ENV_MERGE_INDEX.md  ENV_MERGE_SUMMARY.md  GITHUB_PAGES_SETUP.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTALL.md  LANGUAGE_SUPPORT.md  MIGRATION_GUIDE.md  MULTI_AGENT_STATUS.md  PIPELINE.md  PR_120_SIMPLIFICATION_REVIEW.md  README.md  README_AGENT.md  REFACTORING_SUMMARY.md  SECURITY_ADVISORY.md  SMART_TOKEN_MANAGEMENT.md  TODO.md  WINDOWS_QUICKSTART.md  add_schemas.py  add_to_vector_db.sh  all_input_schemas.txt  batch_refactor_agents.py  build_unified_kg.py  config.json  config.json.example  config_multi_agent_extension.json  console_log.txt  (+26 more)
.github/: BRANCH_PROTECTION_SETUP.md  CODEOWNERS
backend/: README.md  agent_adapter.py  auth_old.py  config.py  constants.py  deps.py  main.py  models.py  requirements.txt  start_backend.sh
benchmark_criteria/: 2026-02-14_16-03-10_criteria_eval_25examples.json  2026-02-14_16-03-10_criteria_eval_25examples.md  criteria_dataset.json  criteria_eval.py  extract_criteria_dataset.py
benchmark_results/: GPT-5-MINI_20251101_110602.json  GPT-5-MINI_20251101_110602.md  GPT-5-MINI_20251109_165056.json  GPT-5-MINI_20251109_165056.md  HAIKU_4-5_20251101_102826.json  HAIKU_4-5_20251101_102826.md  HAIKU_4-5_20251109_160943.json  HAIKU_4-5_20251109_160943.md  benchmark_report_20251101_095316.md  benchmark_report_20251101_095356.md  benchmark_report_20251101_095745.md  benchmark_report_20251101_095838.md  benchmark_report_20251101_100004.md  benchmark_report_20251101_101755.md  benchmark_results_20251101_095316.json  benchmark_results_20251101_095356.json  benchmark_results_20251101_095745.json  benchmark_results_20251101_095838.json  benchmark_results_20251101_100004.json  benchmark_results_20251101_101755.json  indexing_config.json  indexing_cost.json  kg_stats.json
config/: default_config.yaml  entity_aliases.json
docs/: AGENT_ORCHESTRATION.md  API.md  ARCHITECTURE.md  BENCHMARK.md  BLOOM_SETUP.md  CONFIGURATION.md  DEPLOYMENT.md  DOCKER_SETUP.md  DUAL_BACKEND_SUPPORT.md  GRAPH_RAG.md  HITL_IMPLEMENTATION_SUMMARY.md  INDEXING_KG_PIPELINE.md  KNOWLEDGE_GRAPH_GUIDE.md  LANGGRAPH_STATE_FIX.md  LANGUAGE_SUPPORT.md  MULTI_AGENT_INDEX.md  MULTI_FORMAT_SUPPORT.md  RAG_EXPERIMENTATION_GUIDE.md  SOTA_COMPLIANCE_IMPLEMENTATION.md  SOTA_ENHANCEMENT_PLAN.md  WEB_INTERFACE.md  architecture.html  automatic-merge-guide.md  cost-tracking.md  how-to-run-macos.md  index.html  indexing_pipeline.html  multi_agent_architecture.md  multi_agent_components.md  multi_agent_quick_reference.md  overview.html  presentation.tex  rag-confidence-cli-display.md  rag-confidence-troubleshooting.md  rag-confidence.md  roadmap.html  user_search_pipeline.html  vector-db-management.md
examples/: search_simplification.py
extraction_dataset/: BZ_VR1_gt.json  BZ_VR1_gt_normalized.json
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
prompts/: agent_benchmark_prompt.txt  agent_chat_prompt.txt  agent_system_prompt.txt  base_agent_prompt.txt  compliance_assessment.txt  context_compaction.txt  contextual_retrieval_prompt.txt  document_summary.txt  entity_extraction.txt  graph_community_summary.txt  graph_entity_dedup.txt  graph_entity_dedup_batch.txt  graph_entity_dedup_rich.txt  graph_entity_extraction.txt  graph_gt_text_extraction.txt  hyde_expansion.txt  hyde_prompt.txt  hyde_system_prompt.txt  query_decomposition_prompt.txt  query_expansion_prompt.txt  relationship_extraction.txt  section_summary.txt  security_monitor.txt  security_monitor_daily.txt  summary_batch.txt  summary_document_direct.txt  summary_document_hierarchical.txt  summary_section.txt  vl_page_summary.txt
rag_confidence/: CALIBRATION_REPORT.md  RAG_CONFIDENCE_COMPREHENSIVE_REPORT.md  __init__.py  calibrate.py  calibration_result.json  config.py  conformal_predictor.py  conformal_rag_retrieval_guide.md  generate_synthetic_dataset.py  regenerate_matrices.py  run_generation.sh  scorer.py  synthetic_eval_dataset_08.01.26.json  synthetic_eval_dataset_old.json  synthetic_eval_test.json  synthetic_relevance_matrix.npz
scripts/: analyze_eval_results.py  analyze_grid_search.py  backfill_document_categories.py  backup_cron.sh  backup_export.sh  backup_import.sh  batch_fix_agent_costs.py  cleanup_kg.py  cluster_layer2.py  create_user.py  criteria_eval.py  db.sh  debug_workflow_trace.py  dev.sh  embedding_server.py  esbirka_compare.py  esbirka_gt_dataset.py  esbirka_pipeline_extract.py  eval_expansion_only.py  eval_grid_search.py  eval_hyde_expand1.py  eval_hyde_only.py  evaluate_with_runner.py  export_to_gephi.py  extract_phase1_only.py  extraction_eval.py  fetch_deepinfra_pricing.py  fix_metadata_schema.sql  fix_page_numbers.py  fix_postgres.py  gemini_document_extractor.py  gemini_pdf_extraction.py  get_ssl_cert.sh  graph_alias_migrate.py  graph_embed_backfill.py  graph_fts_migrate.py  graph_normalize_dedup.py  graph_rag_build.py  graph_rebuild_communities.py  import_kg_to_neo4j.py  (+43 more)
src/: ToC_retrieval.py  __init__.py  config.py  config_schema.py  context_assembly.py  contextual_retrieval.py  cost_tracker.py  docling_extractor_v2.py  duplicate_detector.py  embedding_generator.py  exceptions.py  extraction_models.py  faiss_vector_store.py  gemini_extractor.py  graph_retrieval.py  hybrid_search.py  hybrid_search_multilang.py  indexing_pipeline.py  latex_parser.py  multi_layer_chunker.py  phase_detector.py  phase_loaders.py  prompt_loader.py  reranker.py  (+3 more)
(+611 files in other folders)
